--- a/index.html
+++ b/index.html
@@ -262,6 +262,30 @@
         font-family: "Montserrat";
         font-weight: 500;
       }
+
+      @media screen and (max-width: 450px) {
+        .f-contact-cont {
+          flex-direction: column;
+        }
+
+        .p-card {
+          align-items: center;
+        }
+
+        .p-cont {
+          flex-direction: column;
+          gap: 25px;
+        }
+
+        .product-cont {
+          align-items: center;
+        }
+
+        .nav div {
+          padding: 0px 25px;
+          text-align: center;
+        }
+      }
     </style>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
