--- a/index.html
+++ b/index.html
@@ -285,6 +285,19 @@
           padding: 0px 25px;
           text-align: center;
         }
+
+        .order-now {
+          padding: 100px 25px;
+        }
+
+        .p-title {
+          padding: 0px 25px;
+          line-height: 120%;
+        }
+
+        .consult {
+          padding: 100px 10px;
+        }
       }
     </style>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
